--- a/data/config.json
+++ b/data/config.json
@@ -1,7 +1,7 @@
 {
     "project": {
-        "title": "xxx: This is title",
-        "authors": ["This is subtitle"],
+        "title": "Improving Sustainability of Adversarial Examples in Class-Incremental Learning",
+        "authors": [""],
         "paper_url": "#",
         "code_url": "#"
     },
@@ -13,24 +13,9 @@
             "type": "targeted",
             "cil_methods": [
                 {
-                    "name": "Replay",
-                    "results_path": "cifar100/replay",
-                    "stat": [ { "name": "SOTA", "value": 0.312 }, { "name": "OUR", "value": 0.376 } ]
-                },
-                {
-                    "name": "MEMO",
-                    "results_path": "cifar100/memo",
-                    "stat": [ { "name": "SOTA", "value": "0.380" }, { "name": "OUR", "value": 0.527 } ]
-                },
-                {
-                    "name": "DER",
-                    "results_path": "cifar100/der",
-                    "stat": [ { "name": "SOTA", "value": 0.402 }, { "name": "OUR", "value": 0.631 } ]
-                },
-                {
-                    "name": "Foster",
-                    "results_path": "cifar100/foster",
-                    "stat": [ { "name": "SOTA", "value": 0.485 }, { "name": "OUR", "value": 0.495 } ]
+                    "name": "PodNet",
+                    "results_path": "cifar100/podnet",
+                    "stat": [ { "name": "SOTA", "value": 0.422 }, { "name": "OUR", "value": 0.853 } ]
                 },
                 {
                     "name": "WA",
@@ -38,19 +23,34 @@
                     "stat": [ { "name": "SOTA", "value": 0.562 }, { "name": "OUR", "value": 0.635 } ]
                 },
                 {
+                    "name": "DER",
+                    "results_path": "cifar100/der",
+                    "stat": [ { "name": "SOTA", "value": 0.402 }, { "name": "OUR", "value": 0.631 } ]
+                },
+                {
                     "name": "BiC",
                     "results_path": "cifar100/bic",
                     "stat": [ { "name": "SOTA", "value": 0.402 }, { "name": "OUR", "value": 0.531 } ]
                 },
                 {
+                    "name": "MEMO",
+                    "results_path": "cifar100/memo",
+                    "stat": [ { "name": "SOTA", "value": "0.380" }, { "name": "OUR", "value": 0.527 } ]
+                },
+                {
+                    "name": "Foster",
+                    "results_path": "cifar100/foster",
+                    "stat": [ { "name": "SOTA", "value": 0.485 }, { "name": "OUR", "value": 0.495 } ]
+                },
+                {
+                    "name": "Replay",
+                    "results_path": "cifar100/replay",
+                    "stat": [ { "name": "SOTA", "value": 0.312 }, { "name": "OUR", "value": 0.376 } ]
+                },
+                {
                     "name": "iCaRL",
                     "results_path": "cifar100/icarl",
                     "stat": [ { "name": "SOTA", "value": 0.324 }, { "name": "OUR", "value": 0.365 } ]
-                },
-                {
-                    "name": "PodNet",
-                    "results_path": "cifar100/podnet",
-                    "stat": [ { "name": "SOTA", "value": 0.422 }, { "name": "OUR", "value": 0.853 } ]
                 },
                 {
                     "name": "Finetune",
@@ -66,14 +66,49 @@
             "type": "targeted",
             "cil_methods": [
                 {
+                    "name": "PodNet",
+                    "results_path": "imagenet100/podnet",
+                    "stat": [ { "name": "SOTA", "value": "0.680" }, { "name": "OUR", "value": 0.839 } ]
+                },
+                {
+                    "name": "MEMO",
+                    "results_path": "imagenet100/memo",
+                    "stat": [ { "name": "SOTA", "value": 0.161 }, { "name": "OUR", "value": 0.329 } ]
+                },
+                {
+                    "name": "DER",
+                    "results_path": "imagenet100/der",
+                    "stat": [ { "name": "SOTA", "value": 0.262 }, { "name": "OUR", "value": 0.326 } ]
+                },
+                {
                     "name": "iCaRL",
                     "results_path": "imagenet100/icarl",
                     "stat": [ { "name": "SOTA", "value": 0.111 }, { "name": "OUR", "value": 0.271 } ]
                 },
                 {
+                    "name": "BiC",
+                    "results_path": "imagenet100/bic",
+                    "stat": [ { "name": "SOTA", "value": 0.095 }, { "name": "OUR", "value": 0.247 } ]
+                },
+                {
+                    "name": "WA",
+                    "results_path": "imagenet100/wa",
+                    "stat": [ { "name": "SOTA", "value": 0.151 }, { "name": "OUR", "value": 0.241 } ]
+                },
+                {
                     "name": "Foster",
                     "results_path": "imagenet100/foster",
                     "stat": [ { "name": "SOTA", "value": 0.225 }, { "name": "OUR", "value": 0.225 } ]
+                },
+                {
+                    "name": "Replay",
+                    "results_path": "imagenet100/replay",
+                    "stat": [ { "name": "SOTA", "value": 0.094 }, { "name": "OUR", "value": 0.189 } ]
+                },
+                {
+                    "name": "Finetune",
+                    "results_path": "imagenet100/finetune",
+                    "stat": [ { "name": "SOTA", "value": 0.098 }, { "name": "OUR", "value": "0.060" } ]
                 }
             ]
         }
